--- a/app/views/public/documents/index.html.erb
+++ b/app/views/public/documents/index.html.erb
@@ -18,8 +18,8 @@
       <%= render "public/documents/document_card", documents: @documents %>
     </div>
     <!--ページネーション-->
-    <div class="col-6 offset-5 text-center">
+    <p class="col-5 text-center mt-3 mb-5">
       <%= paginate @documents %>
-    </div>
+    </p>
   </div>
 </div>
