--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-12 text-center">
       <!--ロゴマーク-->
-      <%= image_tag "logo-m.png", size: "700x600" %>
+      <%= image_tag "logo-m.png", size: "700x600", class: "img" %>
       <!--説明文-->
       <div class="mb-3">
         <h2 class="font-weight-bold">あなたの人生を記録しませんか？</h2>
