--- a/app/views/admin/end_users/word_search.html.erb
+++ b/app/views/admin/end_users/word_search.html.erb
@@ -32,8 +32,8 @@
       </div>
     </div>
     <!--ページネーション-->
-    <div class="col-6 offset-5 text-center">
+    <p class="col-5 text-center mt-3 mb-5">
       <%= paginate @end_users_search %>
-    </div>
+    </p>
   </div>
 </div>
