--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,13 @@
 <header class="sticky-top">
   <nav class="navbar navbar-expand-lg">
     <!--ロゴ-->
+    <div class="mt-1">
     <% if admin_signed_in? %>
       <%= link_to image_tag("logo.png"), admin_path, class: "logo-name" %>
     <% else %>
       <%= link_to image_tag("logo.png"), root_path, class: "logo-name" %>
     <% end %>
+    </div>
     <!--メニュー-->
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav ml-auto mt-4">
