--- a/app/views/public/end_users/show.html.erb
+++ b/app/views/public/end_users/show.html.erb
@@ -4,7 +4,7 @@
     <div class="col-2 text-center">
       <h2 class="font-weight-bold mb-3">マイページ</h2>
       <!--プロフィール画像-->
-      <%= image_tag @end_user.get_profile_image(100,100), class: "rounded-circle" %>
+      <%= image_tag @end_user.get_profile_image(150,150), class: "rounded-circle" %>
       <!--ユーザー名-->
       <p><%= @end_user.name %></p>
       <!--お気に入り-->
@@ -29,7 +29,7 @@
     </div>
     <!--right side-->
     <div class="col-10 text-center mb-1">
-      <!--投稿数-->
+      <!--投稿の統計-->
       <h3 class="mb-2 mb-5">
         1ヶ月間の投稿数は
         <%= current_end_user.documents.where('created_at > ?', Date.today.month).count %>件、
@@ -37,15 +37,19 @@
         <%= current_end_user.documents.all.count %>件です
       </h3>
       <!--投稿数のグラフ-->
-      <div class="d-flex justify-content-center">
+      <div class="d-flex justify-content-center mb-5">
         <div style="position:relative;width:500px;height:300px;">
           <%= render 'public/end_users/line_chart', documents: @documents %>
         </div>
       </div>
-      <!---->
-      <h3 class="mb-2 mb-5">
-        1ヶ月間の感情の統計です
-      </h3>
+      <!--感情の統計-->
+      <h3 class="mb-3">1ヶ月間の感情の統計です</h3>
+      <!--感情アイコン一覧-->
+      <a class="mr-2"><i class="fas fa-grin fa-2x" style="color: #f6c90e"></i></a>
+      <a class="mr-2"><i class="fas fa-angry fa-2x" style="color: #f47c7c"></i></a>
+      <a class="mr-2"><i class="fas fa-sad-tear fa-2x" style="color: #70a1d7"></i></a>
+      <a class="mr-2"><i class="fas fa-meh fa-2x" style="color: #a1de93"></i></a>
+      <a class="mr-2"><i class="fas fa-tired fa-2x" style="color: #aa96da"></i></a>
       <!--感情のグラフ-->
       <div class="d-flex justify-content-center mb-4">
         <div style="position:relative;width:450px;height:450px;">
