[Update]モデルとコントローラのコードを整理

--- a/app/views/public/documents/edit.html.erb
+++ b/app/views/public/documents/edit.html.erb
@@ -18,8 +18,9 @@
       <%= form_with model: @document do |f| %>
         <!--タグ投稿フォーム-->
         <div class="form-group text-left mt-3 mb-5 col-8 offset-2">
-          <%= f.label :tag_name, "既存、または新しいタグをつけてください" %><br>
-          <%= f.text_field :tag_name, autofocus: true, value: @tag_list, class: "form-control form-control-sm" %>
+          <%= f.label :tag_name, "上記のタグ、または新しいタグをつけてください" %><br>
+          <%= f.text_field :tag_name, autofocus: true, placeholder: "複数つける場合は,で区切ってください",
+              value: @tag_list, class: "form-control form-control-sm" %>
         </div>
         <!--感情ステータスを選択-->
         <div class="form-group text-left mt-3 col-8 offset-2">
@@ -52,8 +53,8 @@
         </div>
         <!--記録投稿フォーム-->
         <div class="form-group text-left mt-4 col-8 offset-2">
-          <%= f.label :content, "内容を書いてください" %><br>
-          <%= f.text_area :content, class: "form-control form-control-sm" %>
+          <%= f.label :content, "記録の詳細を書きましょう" %><br>
+          <%= f.text_area :content, placeholder: "入力は必須です", class: "form-control form-control-sm" %>
         </div>
         <!--ボタン-->
         <div class="form-group mt-5 mb-5">
