--- a/app/views/public/documents/new.html.erb
+++ b/app/views/public/documents/new.html.erb
@@ -51,8 +51,8 @@
         </div>
         <!--記録投稿フォーム-->
         <div class="form-group text-left mt-4 col-8 offset-2">
-          <%= f.label :content, "内容を書いてください" %><br>
-          <%= f.text_area :content, class: "form-control form-control-sm" %>
+          <%= f.label :content, "記録の詳細を書きましょう" %><br>
+          <%= f.text_area :content, placeholder: "入力は必須です", class: "form-control form-control-sm" %>
         </div>
         <!--ボタン-->
         <div class="form-group mt-5 mb-5">
