--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -13,25 +13,26 @@
         <!--名前-->
         <div class="form-group text-left mt-3 col-8 offset-2">
           <%= f.label :name %><br>
-          <%= f.text_field :name, autofocus: true, class: "form-control form-control-sm" %>
+          <%= f.text_field :name, autofocus: true, placeholder: "20文字以内",
+              class: "form-control form-control-sm" %>
         </div>
         <!--メールアドレス-->
         <div class="form-group text-left mt-3 col-8 offset-2">
           <%= f.label :email %><br>
-          <%= f.email_field :email, autocomplete: "email", class: "form-control form-control-sm" %>
+          <%= f.email_field :email, autocomplete: "email", placeholder: "メールアドレス",
+              class: "form-control form-control-sm" %>
         </div>
         <!--パスワード-->
         <div class="form-group text-left mt-3 col-8 offset-2">
           <%= f.label :password %>
-          <% if @minimum_password_length %>
-            (<%= @minimum_password_length %> 文字以上)
-          <% end %><br />
-          <%= f.password_field :password, autocomplete: "new-password", class: "form-control form-control-sm" %>
+          <%= f.password_field :password, autocomplete: "new-password", placeholder: "6文字以上の半角英数字",
+              class: "form-control form-control-sm" %>
         </div>
         <!--パスワード確認用-->
         <div class="form-group text-left mt-3 col-8 offset-2">
           <%= f.label :password_confirmation %><br>
-          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control form-control-sm" %>
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "もう一度入力して下さい",
+              class: "form-control form-control-sm" %>
         </div>
         <!--登録ボタン-->
         <div class="actions">
