[Update]管理者側のコードを見やすく変更

--- a/app/views/admin/end_users/show.html.erb
+++ b/app/views/admin/end_users/show.html.erb
@@ -1,25 +1,24 @@
 <div class="container mt-5">
   <div class="row">
+    <!--ページタイトル-->
     <div class="col-6 offset-3 text-center mb-3">
       <h2 class="font-weight-bold">ユーザーの詳細</h2>
     </div>
-    
+    <!--プロフィール-->
     <div class="col-6 offset-3 text-center mb-3">
-      <!--画像-->
       <%= image_tag @end_user.get_profile_image(200,200), class: "rounded-circle" %><br>
-      <!--ユーザー名-->
       <h4 class="font-weight-bold mt-2"><%= @end_user.name %></h4>
     </div>
-    
+    <!--ユーザー詳細情報-->
     <div class="col-6 offset-3 text-center mb-3">
       <table class="table table-borderless">
         <tr>
           <th>ID</th>
-          <td><%= @end_user.id %></tr>
+          <td><%= @end_user.id %></td>
         </tr>
         <tr>
           <th>メールアドレス</th>
-          <td><%= @end_user.email %></tr>
+          <td><%= @end_user.email %></td>
         </tr>
         <tr>
           <th>ステータス</th>
@@ -33,8 +32,7 @@
         </tr>
       </table>
     </div>
-    
-    <!--ボタン-->
+    <!--編集ボタン-->
     <div class="col-6 offset-3 text-center mb-3">
       <%=link_to "編集", edit_admin_end_user_path(@end_user),
           class: "btn btn-outline-success btn-sm rounded-pill mt-1 mb-3 w-50" %>
