--- a/app/views/public/end_users/show.html.erb
+++ b/app/views/public/end_users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container mt-5">
   <div class="row">
-    <!--left side-->
+    <!--ページの左側-->
     <div class="col-2 text-center">
       <h2 class="font-weight-bold mb-3">マイページ</h2>
       <!--プロフィール画像-->
@@ -9,17 +9,18 @@
       <p><%= @end_user.name %></p>
       <!--お気に入り-->
       <div class="mt-2 mb-4">
-        <%=link_to end_user_favorites_path(current_end_user) do %>
+        <%=link_to end_user_favorites_path(current_end_user), class: "btn btn-outline-info btn-sm rounded-pill mb-2 mt-1" do %>
           <i class="fas fa-tag"></i> お気に入りリスト
         <% end %>
       </div>
-      <!--ボタン-->
+      <!--編集ボタン-->
       <%= link_to edit_end_user_path(@end_user),
           class: "btn btn-outline-success btn-sm rounded-pill mb-2 mt-1 edit_user_#{@end_user.id}" do %>
         <div class="flex-colum mx-3 text_center">
           <i class="fas fa-edit"></i> 編集
         </div>
       <% end %>
+      <!--退会ボタン-->
       <%= link_to end_user_confirm_path(@end_user),
           class: "btn btn-outline-danger btn-sm rounded-pill mt-1 edit_user_#{@end_user.id}" do %>
         <div class="flex-colum mx-3 text_center">
@@ -27,7 +28,7 @@
         </div>
       <% end %>
     </div>
-    <!--right side-->
+    <!--ページの右側-->
     <div class="col-10 text-center mb-1">
       <!--投稿の統計-->
       <h3 class="mb-2 mb-5">
@@ -51,7 +52,7 @@
       <a class="mr-2"><i class="fas fa-meh fa-2x" style="color: #a1de93"></i></a>
       <a class="mr-2"><i class="fas fa-tired fa-2x" style="color: #aa96da"></i></a>
       <!--感情のグラフ-->
-      <div class="d-flex justify-content-center mb-4">
+      <div class="d-flex justify-content-center mt-1 mb-4">
         <div style="position:relative;width:450px;height:450px;">
           <%= render 'public/end_users/doughnut_chart', documents: @documents %>
         </div>
