--- a/app/views/public/homes/privacy.html.erb
+++ b/app/views/public/homes/privacy.html.erb
@@ -2,10 +2,10 @@
   <div class="row">
     <div class="col-12 text-left mb-4">
       <h2 class="font-weight-bold text-center mt-4 mb-4">プライバシーポリシー</h2>
-      <p>
+      <p class="">
         Memonto（以下，「当社」といいます。）は，本ウェブサイト上で提供するサービス（以下,「本サービス」と
         いいます。）における，ユーザーの個人情報の取扱いについて，以下のとおりプライバシーポリシー（以下，
-        「本ポリシー」といいます。）を定めます。<br>
+        「本ポリシー」といいます。）を定めます。
       </p>
       <!--第1条-->
       <h4 class="font-weight-bold text-danger">第1条（個人情報）</h4>
@@ -13,7 +13,7 @@
         「個人情報」とは，個人情報保護法にいう「個人情報」を指すものとし，生存する個人に関する情報であって，
         当該情報に含まれる氏名，生年月日，住所，電話番号，連絡先その他の記述等により特定の個人を識別できる
         情報及び容貌，指紋，声紋にかかるデータ，及び健康保険証の保険者番号などの当該情報単体から特定の個人を
-        識別できる情報（個人識別情報）を指します。<br>
+        識別できる情報（個人識別情報）を指します。
       </p>
       <!--第2条-->
       <h4 class="font-weight-bold text-danger">第2条（個人情報の収集方法）</h4>
@@ -21,7 +21,7 @@
         当社は，ユーザーが利用登録をする際に氏名，生年月日，住所，電話番号，メールアドレス，銀行口座番号，
         クレジットカード番号，運転免許証番号などの個人情報をお尋ねすることがあります。また，ユーザーと
         提携先などとの間でなされたユーザーの個人情報を含む取引記録や決済に関する情報を,当社の提携先
-        （情報提供元，広告主，広告配信先などを含みます。以下，｢提携先｣といいます。）などから収集することがあります。<br>
+        （情報提供元，広告主，広告配信先などを含みます。以下，｢提携先｣といいます。）などから収集することがあります。
       </p>
       <!--第3条-->
       <h4 class="font-weight-bold text-danger">第3条（個人情報を収集・利用する目的）</h4>
@@ -36,7 +36,7 @@
           ご利用をお断りするため<br>
         ・ユーザーにご自身の登録情報の閲覧や変更，削除，ご利用状況の閲覧を行っていただくため<br>
         ・有料サービスにおいて，ユーザーに利用料金を請求するため<br>
-        ・上記の利用目的に付随する目的<br>
+        ・上記の利用目的に付随する目的
       </p>
       <!--第4条-->
       <h4 class="font-weight-bold text-danger">第4条（利用目的の変更）</h4>
@@ -44,7 +44,7 @@
         当社は，利用目的が変更前と関連性を有すると合理的に認められる場合に限り，個人情報の利用目的を
         変更するものとします。<br>
         利用目的の変更を行った場合には，変更後の目的について，当社所定の方法により，ユーザーに通知し，
-        または本ウェブサイト上に公表するものとします。<br>
+        または本ウェブサイト上に公表するものとします。
       </p>
       <!--第5条-->
       <h4 class="font-weight-bold text-danger">第5条（個人情報の第三者提供）</h4>
@@ -67,7 +67,7 @@
         ・合併その他の事由による事業の承継に伴って個人情報が提供される場合<br>
         ・個人情報を特定の者との間で共同して利用する場合であって，その旨並びに共同して利用される個人情報の項目，
           共同して利用する者の範囲，利用する者の利用目的および当該個人情報の管理について責任を有する者の氏名
-          または名称について，あらかじめ本人に通知し，または本人が容易に知り得る状態に置いた場合<br>
+          または名称について，あらかじめ本人に通知し，または本人が容易に知り得る状態に置いた場合
       </p>
       <!--第6条-->
       <h4 class="font-weight-bold text-danger">第6条（個人情報の開示）</h4>
@@ -79,7 +79,7 @@
         ・本人または第三者の生命，身体，財産その他の権利利益を害するおそれがある場合<br>
         ・当社の業務の適正な実施に著しい支障を及ぼすおそれがある場合<br>
         ・その他法令に違反することとなる場合<br>
-        前項の定めにかかわらず，履歴情報および特性情報などの個人情報以外の情報については，原則として開示いたしません。<br>
+        前項の定めにかかわらず，履歴情報および特性情報などの個人情報以外の情報については，原則として開示いたしません。
       </p>
       <!--第7条-->
       <h4 class="font-weight-bold text-danger">第7条（個人情報の訂正および削除）</h4>
@@ -89,7 +89,7 @@
         当社は，ユーザーから前項の請求を受けてその請求に応じる必要があると判断した場合には，遅滞なく，
         当該個人情報の訂正等を行うものとします。<br>
         当社は，前項の規定に基づき訂正等を行った場合，または訂正等を行わない旨の決定をしたときは遅滞なく，
-        これをユーザーに通知します。<br>
+        これをユーザーに通知します。
       </p>
       <!--第8条-->
       <h4 class="font-weight-bold text-danger">第8条（個人情報の利用停止等）</h4>
@@ -102,7 +102,7 @@
         当社は，前項の規定に基づき利用停止等を行った場合，または利用停止等を行わない旨の決定をしたときは，遅滞なく，
         これをユーザーに通知します。<br>
         前2項にかかわらず，利用停止等に多額の費用を有する場合その他利用停止等を行うことが困難な場合であって，
-        ユーザーの権利利益を保護するために必要なこれに代わるべき措置をとれる場合は，この代替策を講じるものとします。<br>
+        ユーザーの権利利益を保護するために必要なこれに代わるべき措置をとれる場合は，この代替策を講じるものとします。
       </p>
       <!--第9条-->
       <h4 class="font-weight-bold text-danger">第9条（プライバシーポリシーの変更）</h4>
@@ -110,7 +110,7 @@
         本ポリシーの内容は，法令その他本ポリシーに別段の定めのある事項を除いて，ユーザーに通知することなく，
         変更することができるものとします。<br>
         当社が別途定める場合を除いて，変更後のプライバシーポリシーは，本ウェブサイトに掲載したときから効力を
-        生じるものとします。<br>
+        生じるものとします。
       </p>
     </div>
   </div>
