--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -66,6 +66,34 @@ footer {
   htight: 20px;
 }
 
+.devise-error-messages {
+  color: #fff;
+  text-align: center;
+  position :absolute;
+  top: 10;
+  width: 100%;
+  z-index: 3;
+  padding: 0;
+  background-color: #f6416c;
+  htight: 20px;
+  animation-name: fadeout;
+  animation-duration: 5s;
+  animation-timing-function: ease-out;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadeout {
+  0% {
+    opacity: 1;
+  }
+  60% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
 // feeling button
 // ラジオボタンの丸を消す
 .hidden_radio {
@@ -121,20 +149,20 @@ footer {
 // pagination
 // ページネーション
 .pagination>li>a {
-  border: none;   //枠線消去
-  color: #696969; // 文字色
+  border: none;
+  color: #696969;
   text-align: center;
 }
 
 // 表示しているページ番号のデザイン
 .pagination>.active>a {
-  background: #ff002b; // 背景色
-  border-radius: 50%;  //角丸
+  background: #ff002b;
+  border-radius: 50%;
 }
 
 // ホバー時のデザイン
 .pagination>li>a:hover {
-  border-radius: 50%; //角丸
+  border-radius: 50%;
 }
 
 
