--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,3 +1,6 @@
+<!--エラーメッセージ-->
+<%= render "public/shared/error_messages", resource: resource %>
+
 <div class="container mt-4">
   <div class="row">
     <div class="col-6 offset-3 text-center">
@@ -8,8 +11,6 @@
       </p>
       <!--入力フォーム-->
       <%= form_with model: @end_user, url: end_user_registration_path do |f| %>
-        <!--メッセージ-->
-        <%= render "public/shared/error_messages", resource: resource %>
         <!--名前-->
         <div class="form-group text-left mt-3 col-8 offset-2">
           <%= f.label :name %><br>
