--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,17 +1,14 @@
 <footer class="fixed-bottom mx-0">
-  <div class='container py-3'>
-    <div class='row'>
-      <div class='col-12'>
-      
+  <div class="container py-3">
+    <div class="row">
+      <div class="col-12">
         <div class="text-center my-2">
           <%= link_to "利用規約", service_path %> | 
           <%= link_to "プライバシーポリシー", privacy_path %>
         </div>
-      
         <div class="text-center footer-text">
           <p>Copyright © 2022.Memonto</p>
         </div>
-        
       </div>
     </div>
   </div>
