--- a/app/views/layouts/_hm_header.html.erb
+++ b/app/views/layouts/_hm_header.html.erb
@@ -9,31 +9,31 @@
     <!--ユーザー側-->
     <% if end_user_signed_in? %>
       <li class="nav-item active">
-        <%= render 'layouts/search_form'%>
+        <%= render "layouts/search_form" %>
       </li>
       <li class="nav-item">
-        <%= link_to new_document_path, class: 'btn btn-secondary rounded-pill my-3' do %>
+        <%= link_to new_document_path, class: "btn btn-secondary rounded-pill my-3" do %>
           <div class="flex-colum mx-3 text_center">
             <i class="fas fa-pen-nib"></i> 記録を書く
           </div>
         <% end %>
       </li>
       <li class="nav-item">
-        <%= link_to documents_path, class: 'btn btn-secondary rounded-pill' do %>
+        <%= link_to documents_path, class: "btn btn-secondary rounded-pill" do %>
           <div class="flex-colum mx-3 text_center">
             <i class="fas fa-book-open"></i> 記録を見る
           </div>
         <% end %>
       </li>
       <li class="nav-item">
-        <%= link_to end_user_path(current_end_user), class: 'btn btn-secondary rounded-pill my-3' do %>
+        <%= link_to end_user_path(current_end_user), class: "btn btn-secondary rounded-pill my-3" do %>
           <div class="flex-colum mx-3 text_center">
             <i class="fas fa-user"></i> マイページ
           </div>
         <% end %>
       </li>
       <li class="nav-item">
-        <%= link_to destroy_end_user_session_path, method: :delete, class: 'btn btn-secondary rounded-pill' do %>
+        <%= link_to destroy_end_user_session_path, method: :delete, class: "btn btn-secondary rounded-pill" do %>
           <div class="flex-colum mx-3 text_center">
             <i class="fas fa-sign-out-alt"></i> ログアウト
           </div>
@@ -42,17 +42,17 @@
     <!--管理者側-->
     <% elsif admin_signed_in? %>
       <li class="nav-item">
-        <%= render 'layouts/search_form'%>
+        <%= render "layouts/search_form" %>
       </li>
       <li class="nav-item">
-        <%= link_to admin_path, class: 'btn btn-secondary rounded-pill my-3' do %>
+        <%= link_to admin_path, class: "btn btn-secondary rounded-pill my-3" do %>
           <div class="flex-colum mx-3 text_center">
             <i class="fas fa-users"></i> ユーザー
           </div>
         <% end %>
       </li>
       <li class="nav-item">
-        <%= link_to destroy_admin_session_path, method: :delete, class: 'btn btn-secondary rounded-pill' do %>
+        <%= link_to destroy_admin_session_path, method: :delete, class: "btn btn-secondary rounded-pill" do %>
           <div class="flex-colum mx-3 text_center">
             <i class="fas fa-sign-out-alt"></i> ログアウト
           </div>
@@ -61,28 +61,28 @@
     <!--ログイン前-->
     <% else %>
       <li class="nav-item">
-        <%= link_to about_path, class: 'btn btn-secondary rounded-pill my-3' do %>
+        <%= link_to about_path, class: "btn btn-secondary rounded-pill my-3" do %>
           <div class="flex-colum mx-3 text_center">
             <i class="fas fa-question-circle"></i> ABOUT
           </div>
         <% end %>
       </li>
       <li class="nav-item">
-        <%= link_to new_end_user_registration_path, class: 'btn btn-secondary rounded-pill' do %>
+        <%= link_to new_end_user_registration_path, class: "btn btn-secondary rounded-pill" do %>
           <div class="flex-colum mx-3 text_center">
             <i class="fas fa-user-plus"></i> 新規登録
           </div>
         <% end %>
       </li>
       <li class="nav-item">
-        <%= link_to new_end_user_session_path, class: 'btn btn-secondary rounded-pill my-3' do %>
+        <%= link_to new_end_user_session_path, class: "btn btn-secondary rounded-pill my-3" do %>
           <div class="flex-colum mx-3 text_center">
             <i class="fas fa-sign-in-alt"></i> ログイン
           </div>
         <% end %>
       </li>
       <li class="nav-item">
-        <%= link_to end_users_guest_sign_in_path, method: :post, class: 'btn btn-secondary rounded-pill' do %>
+        <%= link_to end_users_guest_sign_in_path, method: :post, class: "btn btn-secondary rounded-pill" do %>
           <div class="flex-colum mx-3 text_center">
             <i class="fas fa-user-check"></i> ゲストログイン
           </div>
