--- a/app/views/public/shared/_links.html.erb
+++ b/app/views/public/shared/_links.html.erb
@@ -1,7 +1,11 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "こちら", new_session_path(resource_name) %>
+  <%= link_to new_session_path(resource_name) do %>
+    <i class="fas fa-arrow-circle-right"></i>こちら
+  <% end %>
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "こちら", new_registration_path(resource_name) %>
+  <%= link_to new_registration_path(resource_name) do %>
+    <i class="fas fa-arrow-circle-right"></i>こちら
+  <% end %>
 <% end %>
