[Update]ページネーションの色を変更

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -150,18 +150,18 @@ footer {
 // ページネーション
 .pagination>li>a {
   border: none;
-  color: #696969;
+  color: #34495e;
   text-align: center;
 }
 
 // 表示しているページ番号のデザイン
 .pagination>.active>a {
-  background: #ff002b;
   border-radius: 50%;
 }
 
 // ホバー時のデザイン
 .pagination>li>a:hover {
+  background: eaf7fc;
   border-radius: 50%;
 }
 
