--- a/app/views/public/documents/_document_form.html.erb
+++ b/app/views/public/documents/_document_form.html.erb
@@ -1,13 +1,13 @@
 <%= form_with model: document do |f| %>
   <!--タグ投稿フォーム-->
   <div class="form-group text-left mb-5 col-8 offset-2">
-    <%= f.label :tag_name, "上記のタグ、または新しいタグをつけてください" %><br>
+    <%= f.label :tag_name, "上記のタグ、または新しいタグをつけましょう" %><br>
     <%= f.text_field :tag_name, autofocus: true, placeholder: "複数つける場合は,で区切ってください",
         value: tag_list, class: "form-control form-control-sm" %>
   </div>
   <!--感情ステータスを選択-->
   <div class="form-group text-left mt-3 col-8 offset-2">
-    <p>今の気持ちを選んでください</p>
+    <p>今の気持ちを選びましょう</p>
     <!--感情：happy-->
     <%= f.radio_button :feeling, :happy, class: "hidden_radio" %>
     <%= f.label :feeling, class: 'feeling_icon check_radio', for: "document_feeling_happy" do %>
