--- a/app/views/admin/end_users/_end_user_card.html.erb
+++ b/app/views/admin/end_users/_end_user_card.html.erb
@@ -1,12 +1,12 @@
 <div class="d-flex flex-wrap justify-left-around">
   <% end_users.each do |end_user| %>
-    <div class="mt-3 mb-3 ml-2">
-      <%= link_to admin_end_user_path(end_user) do %>
-        <div class="card" style="width: 15rem; color:#727068; background-color:#ffffff">
+    <%= link_to admin_end_user_path(end_user) do %>
+      <div class="card mt-3 mb-3 ml-2">
+        <div class="card", style="width: 15rem; color:#727068; background-color:#ffffff">
           <!--プロフィール画像-->
           <%= image_tag end_user.get_profile_image(200,200), class: "card-img-top", alt: "Card image cap",
               style: "height: 150px; width: auto; object-fit: cover" %>
-          <div class="card-body">
+          <div class="card-body", style="color:#4b4841; background-color:#ffffff">
             <!--ユーザー名-->
             <h5 class="card-title"><%= end_user.name %></h5>
             <!--ステータス-->
@@ -20,7 +20,7 @@
             </p>
           </div>
         </div>
-      <% end %>
-    </div>
+      </div>
+    <% end %>
   <% end %>
 </div>
