--- a/app/views/admin/end_users/edit.html.erb
+++ b/app/views/admin/end_users/edit.html.erb
@@ -29,11 +29,11 @@
         <!--ステータス-->
         <div class="form-group text-center mt-3 col-8 offset-2">
           <!--退会-->
-          <%= f.radio_button :is_deleted, "true", class: "mr-1" %>
+          <%= f.radio_button :is_deleted, true, class: "mr-1" %>
           <%= f.label :is_deleted_true, "退会" %>
           <i class="fas fa-comment-slash"></i>&emsp;
           <!--有効-->
-          <%= f.radio_button :is_deleted, "false", class: "mr-1" %>
+          <%= f.radio_button :is_deleted, false, class: "mr-1" %>
           <%= f.label :is_deleted_false, "有効" %>
           <i class="fas fa-comment-dots"></i>
         </div>
