--- a/app/views/public/documents/tag_search.html.erb
+++ b/app/views/public/documents/tag_search.html.erb
@@ -8,8 +8,8 @@
       <%= render "public/documents/document_card", documents: @tags_search %>
     </div>
     <!--ページネーション-->
-    <p class="col-5 text-center mt-3 mb-5">
+    <div class="col-6 offset-3 justify-content-center mt-3 mb-5 d-flex">
       <%= paginate @tags_search %>
-    </p>
+    </div>
   </div>
 </div>
