--- a/app/views/public/end_users/favorites.html.erb
+++ b/app/views/public/end_users/favorites.html.erb
@@ -14,7 +14,7 @@
       <% end %> 
     </div>
     <!--ページネーション-->
-    <div class="col-5 offset-5 text-center">
+    <div class="col-6 offset-3 justify-content-center mt-3 mb-5 d-flex">
       <%= paginate @favorite_list %>
     </div>
   </div>
