--- a/app/views/public/end_users/confirm.html.erb
+++ b/app/views/public/end_users/confirm.html.erb
@@ -4,7 +4,7 @@
       <h2 class="font-weight-bold">退会確認</h2>
       <!--説明文-->
       <p class="mt-4">
-        退会手続きをされますと、記録履歴など一部のサービスが利用できなくなります。<br>
+        退会手続きをされますと、今までの記録たマイページなどのサービスが利用できなくなります。<br>
         再度ご利用をいただく場合には、新規登録のお手続きが必要になります。<br>
         本当に退会してよろしいですか？
       </p>
