--- a/app/views/public/end_users/show.html.erb
+++ b/app/views/public/end_users/show.html.erb
@@ -13,19 +13,21 @@
           <i class="fas fa-tag"></i> お気に入りリスト
         <% end %>
       </div>
-      <!--編集ボタン-->
-      <%= link_to edit_end_user_path(@end_user),
-          class: "btn btn-outline-success btn-sm rounded-pill mb-2 mt-1 edit_user_#{@end_user.id}" do %>
-        <div class="flex-colum mx-3 text_center">
-          <i class="fas fa-edit"></i> 編集
-        </div>
-      <% end %>
-      <!--退会ボタン-->
-      <%= link_to end_user_confirm_path(@end_user),
-          class: "btn btn-outline-danger btn-sm rounded-pill mt-1 edit_user_#{@end_user.id}" do %>
-        <div class="flex-colum mx-3 text_center">
-          <i class="fas fa-reply-all"></i> 退会
-        </div>
+      <% if @end_user.name != "guestuser" %>
+        <!--編集ボタン-->
+        <%= link_to edit_end_user_path(@end_user),
+            class: "btn btn-outline-success btn-sm rounded-pill mb-2 mt-1 edit_user_#{@end_user.id}" do %>
+          <div class="flex-colum mx-3 text_center">
+            <i class="fas fa-edit"></i> 編集
+          </div>
+        <% end %>
+        <!--退会ボタン-->
+        <%= link_to end_user_confirm_path(@end_user),
+            class: "btn btn-outline-danger btn-sm rounded-pill mt-1 edit_user_#{@end_user.id}" do %>
+          <div class="flex-colum mx-3 text_center">
+            <i class="fas fa-reply-all"></i> 退会
+          </div>
+        <% end %>
       <% end %>
     </div>
     <!--ページの右側-->
@@ -53,7 +55,7 @@
       <a class="mr-2"><i class="fas fa-tired fa-2x" style="color: #aa96da"></i></a>
       <!--感情のグラフ-->
       <div class="d-flex justify-content-center mt-1 mb-4">
-        <div ="chart-doughnut">
+        <div class ="chart-doughnut">
           <%= render 'public/end_users/doughnut_chart', documents: @documents %>
         </div>
       </div>
