[Update]メッセージの変更

--- a/app/javascript/stylesheets/header.scss
+++ b/app/javascript/stylesheets/header.scss
@@ -1,3 +1,4 @@
+// ハンバーガーメニュー
 #hm-menu{
   position:fixed;
   z-index: 999;
@@ -5,7 +6,7 @@
   left: -120%;
   width: 300px;
   height: 100vh;
-  background:#999; // メニュー背景
+  background:#999;
   transition: all 0.6s;
 }
 
