--- a/app/views/public/documents/_document_editform.html.erb
+++ b/app/views/public/documents/_document_editform.html.erb
@@ -7,7 +7,7 @@
   </div>
   <!--感情ステータスを選択-->
   <div class="form-group text-left mt-3 col-8 offset-2">
-    <p>今の気持ちを選びましょう</p>
+    <p>あのの気持ちを選びましょう</p>
     <!--感情：happy-->
     <%= f.radio_button :feeling, :happy, class: "hidden_radio" %>
     <% if document.feeling == "happy" %>
