--- a/app/views/public/end_users/confirm.html.erb
+++ b/app/views/public/end_users/confirm.html.erb
@@ -13,7 +13,7 @@
         <%= link_to "退会しない", end_user_path(current_end_user),
             class: 'btn btn-outline-info rounded-pill w-50 mt-1' %>
         <%= link_to "退会する", end_user_withdrawal_path, method: :patch, 
-            data: { confilm: "本当に退会しますか？" }, class: 'btn btn-outline-danger rounded-pill w-50 mt-3' %>
+            class: 'btn btn-outline-danger rounded-pill w-50 mt-3' %>
       </div>
     </div>
   </div>
