[Update]分かりやすい文章に修正

--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -7,7 +7,8 @@
       <div class="mb-3">
         <h2 class="font-weight-bold">あなたの人生を記録しませんか？</h2>
         <p class="mt-3 mb-5">
-          その瞬間に感動したことを自分だけのライフログとして記録することができるサービスです。<br>
+          日々の行動や見聞きしたこと、その瞬間に何を感じたのかを<br>
+          自分だけのライフログとして簡単に記録することができるサービスです。<br>
           記録した出来事を振り返り、自分と向き合う時間を作りましょう。
         </p>
         <div class="mb-5">
