--- a/app/views/public/documents/tag_search.html.erb
+++ b/app/views/public/documents/tag_search.html.erb
@@ -3,6 +3,16 @@
     <div class="col-6 offset-3 text-center">
       <h2 class="font-weight-bold">タグ検索結果</h2>
     </div>
+    <!--タグリスト-->
+    <div class="col-10 offset-1 text-center mt-3 mb-5">
+      <% @tags.each do |list| %>
+        <%=link_to tag_search_documents_path(tag_id: list.id) do %>
+          <div class="btn btn-outline-secondary btn-sm rounded-pill">
+            <i class="fas fa-tag"></i> <%= list.name %>
+          </div>
+        <% end %>
+      <% end %>
+    </div>
     <!--記録の一覧-->
     <div class="col-10 offset-1 text-left mt-3 mb-5">
       <%= render "public/documents/document_card", documents: @tags_search %>
