[Update]投稿数のカウントを変更

--- a/app/views/public/end_users/_doughnut_chart.html.erb
+++ b/app/views/public/end_users/_doughnut_chart.html.erb
@@ -1,6 +1,6 @@
 <div class="chart_feeling">
   <canvas id="myDoughnutChart" width="400" height="400"></canvas>
-  <p class="chart-title">1ヶ月間の<br>感情グラフ</p>
+  <p class="chart-title">今月の<br>感情グラフ</p>
 </div>
 <script>
   var ctx = document.getElementById('myDoughnutChart').getContext('2d');
